--- a/cfg-actions.yaml
+++ b/cfg-actions.yaml
@@ -14,6 +14,7 @@ routes:
 
 - name: actions-route
   input: contains(input.SigMetadata.ID, "TRC-2")
+  serialize-outputs: true                       # Optional. Serialize outputs in route.
   outputs: [my-exec, my-exec-2, my-http-get, my-http-post]
   template: raw-json
 
