feat(webhook output): added http client timeout (#245)
* feat: added http client timeout for webhook output

* feat(webhook): add timeout field to configuration file

* test(webhook): add tests

* test(webhook): add getName test

* docs(webhook): add timeout field

* refactor(cfg.yaml): add default value for webhook timeout

* test(webhook): used httptest.Server for TestWebhook_Send

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -102,6 +102,7 @@ outputs:
   type: webhook
   enable: false
   url: https://..../webhook/   #  Webhook's url
+  timeout:                     #  Webhook's timeout. <numbers><unit suffix> pattern is used, such as "300ms" or "2h45m". Default: 120s
 
 - name: splunk
   type: splunk
