--- a/cfg-actions.yaml
+++ b/cfg-actions.yaml
@@ -15,7 +15,7 @@ routes:
 - name: actions-route
   input: contains(input.SigMetadata.ID, "TRC-2")
   serialize-outputs: true                       # Optional. Serialize outputs in route.
-  outputs: [my-exec, my-exec-2, my-http-get, my-http-post]
+  outputs: [my-exec, my-exec-2, my-http-get, my-http-post-file, my-http-post-content]
   template: raw-json
 
 # Templates are used to format a message
@@ -30,7 +30,7 @@ outputs:
   enable: true
 
 # Define a custom output of exec action, that can take params.
-- name: my-exec-2
+- name: my-exec
   type: exec
   enable: true
   env: ["MY_ENV_VAR=foo_bar_baz", "MY_KEY=secret"]     # Optional. Any environment variables to pass in
@@ -38,16 +38,37 @@ outputs:
     #!/bin/sh
     echo $POSTEE_EVENT
 
-- name: my-http-post
+- name: my-exec-2
+  type: exec
+  enable: true
+  env: ["MY_ENV_VAR=foo_bar_baz", "MY_KEY=secret"]     # Optional. Any environment variables to pass in
+  input-file: /tmp/exec-test.sh                        # Specify the path to the script to run
+
+- name: my-http-get
+    type: http
+    enable: true
+    url: "https://my-fancy-url.com"     # Required. URL of the HTTP Request
+    method: GET                         # Required. Method to use. CONNECT is not supported at this time
+    headers:                            # Optional. Headers to pass in for the request
+      "Foo": ["bar", "baz"]
+    timeout: 1s                         # Optional. Timeout value in XX(s,m,h)
+
+- name: my-http-post-file
   type: http
   enable: true
-  url: "https://my-fancy-url.com"     # Required. URL of the HTTP Request
-  method: POST                        # Required. Method to use. CONNECT is not supported at this time
-  headers:                            # Optional. Headers to pass in for the request.
-    "Foo": ["bar"]
-    "Haz": ["baz"]
+  url: "https://my-fancy-url.com"       # Required. URL of the HTTP Request
+  method: POST                          # Required. Method to use. CONNECT is not supported at this time
+  body-file: /tmp/some.log.file         # Optional. Body file of the HTTP request
+
+- name: my-http-post-content
+  type: http
+  enable: true
+  url: "https://my-fancy-url.com"       # Required. URL of the HTTP Request
+  method: POST                          # Required. Method to use. CONNECT is not supported at this time
+  headers:                              # Optional. Headers to pass in for the request.
+    "Foo": [ "bar" ]
+    "Haz": [ "baz" ]
   timeout: 10s                          # Optional. Timeout value in XX(s,m,h)
-#  body-file: /tmp/tracee.event.logs    # Optional. Body file of the HTTP request
   body-content: |                       # Optional. Body inline content of the HTTP request
     This is an example of a inline body
     Event ID: event.input.Signature.ID
