feat (nexus iq): add nexus iq integration  (#197)
* issue-99 added rego for cyclonedx

* issue-99 partial implementation of nexus-iq support

* issue-99 added logic to get or create app

* issue-99 cleaned up logging

* issue-99 wrapped errors

* issue-99 added examples and documentation

* UI support for nexus-iq

* fixed dependencies issue

* addressed lint issues

* reverted options for frontend build

* improved test coverage

* updated content table

* add license and recommendation

* feat(output): added nexus integration

add vuls without 'solution'

* feat(output): added nexus integration

limited length of license field
removed description as html encoding can not be applied

* feat(output): added nexus integration

fix issue with slash in image name

* feat(output): added nexus integration

add unit tests

* feat(output): added nexus integration

fix linter error

* feat(output): added nexus integration

code clean up

* Update outputs/nexusiq.go

Add a sane timeout value.

* Update nexusiq.go

Co-authored-by: simar7 <1254783+simar7@users.noreply.github.com>

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -48,6 +48,9 @@ templates:
   url:                                  #  URL to custom REGO file
 - name: raw-json                        # route message "As Is" to external webhook
   rego-package: postee.rawmessage.json
+- name: vuls-cyclonedx                  # export vulnerabilities to CycloneDX XML
+  rego-package: postee.vuls.cyclondx
+
 
 
 # Outputs are target services that should consume the messages
@@ -118,4 +121,11 @@ outputs:
   password:  # Mandatory. Specify user API key
   instance:  # Mandatory. Name of ServiceN  ow Instance
   board:     #  Specify the ServiceNow board name to open tickets on. Default is "incident"
-  
+
+- name: my-nexus-iq
+  type: nexusIq
+  enable: false
+  user:             # Mandatory. User name
+  password:         # Mandatory. User password
+  url:              # Mandatory. Url of Nexus IQ server
+  organization-id:  # Mandatory. Organization UID like "222de33e8005408a844c12eab952c9b0"
