--- a/.github/workflows/publish-chart.yml
+++ b/.github/workflows/publish-chart.yml
@@ -38,7 +38,7 @@ jobs:
           image: ${{ env.KIND_IMAGE }}
       - name: Installing Kubernetes Postee manifest
         run: |
-            kubectl create -f deploy/kubernetes
+            kubectl create -f deploy/kubernetes/postee.yaml
       - name: Testing Kubernetes Postee manifest
         run: |
             kubectl wait --for=condition=Ready pod -l app=postee --timeout=150s
