--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,18 +13,35 @@ builds:
     dir: .
     main: ./main.go
     binary: postee
+    ldflags:
+      - -s -w
+      - "-extldflags '-static'"
+      - -X main.version={{.Version}}
     goos:
       - darwin
       - linux
     goarch:
       - amd64
-
+      - arm
+      - arm64
+    goarm:
+      - 7
 archives:
-  - name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
+  - name_template: "{{ .ProjectName }}_{{.Version}}_{{ .Os }}_{{ .Arch }}"
     builds:
       - postee
     replacements:
-      amd64: x86_64
+      amd64: 64bit
+      386: 32bit
+      arm: ARM
+      arm64: ARM64
+      ppc64le: PPC64LE
+      darwin: macOS
+      linux: Linux
+      openbsd: OpenBSD
+      netbsd: NetBSD
+      freebsd: FreeBSD
+      dragonfly: DragonFlyBSD
     format_overrides:
       - goos: windows
         format: zip
@@ -42,9 +59,11 @@ changelog:
 dockers:
   - dockerfile: Dockerfile.release
     use: buildx
+    goos: linux
+    goarch: amd64
     image_templates:
-      - "docker.io/aquasec/postee:{{ .Version }}"
-      - "public.ecr.aws/aquasecurity/postee:{{ .Version }}"
+      - "docker.io/aquasec/postee:{{ .Version }}-amd64"
+      - "public.ecr.aws/aquasecurity/postee:{{ .Version }}-amd64"
       - "docker.io/aquasec/postee:latest"
       - "public.ecr.aws/aquasecurity/postee:latest"
     ids:
@@ -61,11 +80,14 @@ dockers:
       - "--label=org.opencontainers.image.created={{ .Date }}"
       - "--label=org.opencontainers.image.source=https://github.com/aquasecurity/postee"
       - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
+      - "--platform=linux/amd64"
   - dockerfile: Dockerfile.ui
     use: buildx
+    goos: linux
+    goarch: amd64
     image_templates:
-      - "docker.io/aquasec/postee-ui:{{ .Version }}"
-      - "public.ecr.aws/aquasecurity/postee-ui:{{ .Version }}"
+      - "docker.io/aquasec/postee-ui:{{ .Version }}-amd64"
+      - "public.ecr.aws/aquasecurity/postee-ui:{{ .Version }}-amd64"
       - "docker.io/aquasec/postee-ui:latest"
       - "public.ecr.aws/aquasecurity/postee-ui:latest"
     ids:
@@ -83,3 +105,5 @@ dockers:
       - "--label=org.opencontainers.image.created={{ .Date }}"
       - "--label=org.opencontainers.image.source=https://github.com/aquasecurity/postee"
       - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
+      - "--label=org.opencontainers.image.documentation=https://aquasecurity.github.io/postee/v{{ .Version }}/"
+      - "--platform=linux/amd64"
