--- a/config/cfg-docker-actions.yaml
+++ b/config/cfg-docker-actions.yaml
@@ -1,5 +1,5 @@
 # The configuration file contains a general settings section,
-# routes, templates and outputs sections.
+# routes, templates and actions sections.
 
 name: tenant            #  The tenant name
 aqua-server:            #  URL of Aqua Server for links. E.g. https://myserver.aquasec.com
@@ -9,12 +9,12 @@ db-verify-interval: 1   #  How often to check the DB size. By default, Postee ch
 # Routes are used to define how to handle an incoming message
 routes:
 - name: stdout
-  outputs: [ stdout ]
+  actions: [ stdout ]
   template: raw-json
 
 - name: actions-route
   input: contains(input.SigMetadata.ID, "TRC-2")
-  outputs: [stop-vulnerable-pod]
+  actions: [stop-vulnerable-pod]
   template: raw-json
 
 # Templates are used to format a message
@@ -23,7 +23,7 @@ templates:
   rego-package: postee.rawmessage.json
 
 # Outputs are target services that should consume the messages
-outputs:
+actions:
 - name: stdout
   type: stdout
   enable: true
