--- a/docs/examples/drift-teams.yaml
+++ b/docs/examples/drift-teams.yaml
@@ -9,10 +9,10 @@ db-verify-interval: 1   # hours. an Interval between tests of DB. Default: 1 hou
 routes:
 - name: team-drift
   input: contains(input.control, "Drift")
-  outputs: [my-teams]
+  actions: [my-teams]
   template: raw-html
 
-outputs:
+actions:
 - name: my-teams
   type: teams
   enable: true
