--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,44 +1,43 @@
 ---
-name: Go
+name: Pull Request
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+env:
+  GO_VERSION: "1.18"
 
 jobs:
-
   build:
-    name: Build
+    name: Checks
     runs-on: ubuntu-20.04
     steps:
 
-      - name: Set up Go 1.x
-        uses: actions/setup-go@424fc82d43fa5a37540bae62709ddcc23d9520d4 # v2.1.5
+      - name: Set up Go
+        uses: actions/setup-go@v3
         with:
-          go-version: ^1.18
+          go-version: ${{ env.GO_VERSION }}
         id: go
+
       - name: Check out code into the Go module directory
-        uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846 # v2.4.0
+        uses: actions/checkout@v3
+
       - name: Setup golangci-lint
-        uses: golangci/golangci-lint-action@c675eb70db3aa26b496bc4e64da320480338d41b # v2.5.2
+        uses: golangci/golangci-lint-action@v3.1.0
         with:
-          args: --verbose
-          version: latest
-      - name: check spell
-        uses: codespell-project/actions-codespell@master
-        with:
-          skip: src,rego-templates,ui,go.mod,go.sum
+          args: --timeout=10m --verbose
+          version: v1.45
 
       - name: Build
-        run: make all
+        run: make build
 
       - name: Test
         run: make test
 
       - name: Run Trivy vulnerability scanner in repo mode
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.3.0
         with:
           scan-type: 'fs'
           ignore-unfixed: true
@@ -53,7 +52,7 @@ jobs:
           sarif_file: 'trivy-results.sarif'
       
       - name: Run Trivy vulnerability scanner in IaC mode
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.3.0
         with:
           scan-type: 'config'
           hide-progress: false
