--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -1,7 +1,7 @@
 ---
 # This is a manually triggered workflow to build and publish the MkDocs from the
 # specified Git revision to GitHub pages on https://aquasecurity.github.io/postee
-name: Publish documentation
+name: Publish Documentation
 
 on:
   workflow_dispatch:
@@ -21,12 +21,12 @@ jobs:
       contents: write
     steps:
     - name: Checkout main
-      uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+      uses: actions/checkout@v3
       with:
         ref: ${{ github.event.inputs.ref }}
         fetch-depth: 0
         persist-credentials: true
-    - uses: actions/setup-python@98f2ad02fd48d057ee3b4d4f66525b231c3e52b6
+    - uses: actions/setup-python@v3
       with:
         python-version: 3.x
     - run: |
