feat(docs): Add documentation about Controller/Runner mode.
Signed-off-by: Simar <simar@linux.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
   - Routes: routes.md
   - Templates: templates.md
   - Actions: actions.md
+  - Controller/Runner: controller-runner.md
 - Demo: demo.md
 - Aqua Cloud: aquacloud.md
 - Postee UI: ui.md
