--- a/cfg.yaml
+++ b/cfg.yaml
@@ -139,4 +139,5 @@ actions:
   recipients: [""]  # Optional. Comma separated list of users that the alert will become visible to without sending any notification
   tags:             # Optional. Comma separated list of the alert tags.
   priority:         # Optional. Specify the alert priority. Default is "P3"
-
+  alias:            # Optional. Client-defined identifier of the alert.
+  entity:           # Optional. Entity field of the alert that is generally used to specify which domain alert is related to.
