feat(action): add OpsGenie action (#347)
* feat(output): add OpsGenie output

* create OpsGenie output

* add an instruction for set up OpsGenie integration

* add token and url to the config file

* Add user, responders and visibleTo fields

* Add a mark about authentification problem to the docs

* clean params

* add opsgenie plugin and simple rego template for it

* remove unused method

* clean default values

* fix handling priority

* add tests

* update docs

* add a way to set tags and priority fields via config files

* create a client for instance

* improve converteing from interface{} to string

* add validation for tags

* add setting `alias` and `entity` fields via the config file

* fix test

* rename OpsGenie basic struct

* change a log message

* added a test case for tags as string

* add the termination log for OpsGenie action

* add `required` field to the docs

* Add a note about OpsGenie API Key

Co-authored-by: simar7 <1254783+simar7@users.noreply.github.com>

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -129,3 +129,15 @@ actions:
   password:         # Mandatory. User password
   url:              # Mandatory. Url of Nexus IQ server
   organization-id:  # Mandatory. Organization UID like "222de33e8005408a844c12eab952c9b0"
+
+- name: my-opsgenie
+  type: opsgenie
+  enable: false
+  token: <API Key>  # Mandatory. an API key from an API integration
+  user:             # Optional. Display name of the request owner.
+  assignee:         # Optional. Comma separated list of users that the alert will be routed to send notifications
+  recipients: [""]  # Optional. Comma separated list of users that the alert will become visible to without sending any notification
+  tags:             # Optional. Comma separated list of the alert tags.
+  priority:         # Optional. Specify the alert priority. Default is "P3"
+  alias:            # Optional. Client-defined identifier of the alert.
+  entity:           # Optional. Entity field of the alert that is generally used to specify which domain alert is related to.
