--- a/deploy/kubernetes/hostPath/postee-pv.yaml
+++ b/deploy/kubernetes/hostPath/postee-pv.yaml
@@ -3,9 +3,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postee-pv
+  name: postee-db
   labels:
-    app: postee-pv
+    app: postee-db
 spec:
   capacity:
     storage: 1Gi
