--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,24 +7,27 @@ on:
 env:
   GO_VERSION: "1.18"
 jobs:
-  unit-tests:
-    name: Run unit tests
+  tests:
+    name: Run Tests
     runs-on: ubuntu-20.04
     steps:
       - name: Setup Go
-        uses: actions/setup-go@424fc82d43fa5a37540bae62709ddcc23d9520d4
+        uses: actions/setup-go@v3
         with:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Checkout code
-        uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Run unit tests
+      - name: Run Unit tests
         run: |
           make all
           make test
+
+      - name: Run Integration Tests
+        run: make test-integration
 
       - name: Run Trivy vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@0.3.0
@@ -50,16 +53,16 @@ jobs:
   release:
     name: Release
     needs:
-      - unit-tests
+      - tests
     runs-on: ubuntu-20.04
     steps:
       - name: Setup Go
-        uses: actions/setup-go@424fc82d43fa5a37540bae62709ddcc23d9520d4
+        uses: actions/setup-go@v3
         with:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Checkout code
-        uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
