--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -1,22 +1,24 @@
 {
   "name": "postee-ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
-    "serve": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service serve",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build",
-    "lint": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service lint"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.18.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
+    "codemirror-rego": "^1.1.0",
+    "core-js": "^3.18.1",
     "js-yaml": "^4.1.0",
+    "vue": "^2.6.11",
     "vue-codemirror": "^4.0.6",
-    "codemirror-rego": "^1.1.0"
+    "vue-json-pretty": "^1.8.3",
+    "vue-router": "^3.5.1",
+    "vue-tmx": "^0.1.12",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
