--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -13,6 +13,7 @@
     "codemirror-rego": "^1.1.0",
     "core-js": "^3.18.1",
     "js-yaml": "^4.1.0",
+    "node-forge": "^1.3.0",
     "vue": "^2.6.11",
     "vue-codemirror": "^4.0.6",
     "vue-json-pretty": "^1.8.3",
@@ -33,7 +34,7 @@
     "ansi-regex": "5.0.1",
     "glob-parent": "5.1.2",
     "nth-check": "2.0.1",
-    "node-forge": "1.0.0"
+    "node-forge": "1.3.0"
   },
   "eslintConfig": {
     "root": true,
