--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-codemirror": "^4.0.6",
     "vue-json-pretty": "^1.8.3",
+    "vue-json-viewer": "2",
     "vue-router": "^3.5.1",
     "vue-tmx": "^0.1.12",
     "vuex": "^3.6.2"
