chore: add default filters to tracee signatures

--- a/config/terminate-malicious-pods.yaml
+++ b/config/terminate-malicious-pods.yaml
@@ -36,4 +36,5 @@ rules:
   - name: Privilege Escalation
   - name: Defense Evasion
   - name: Persistence
+  - name: tracee-default
 name: Terminating Malicious Pods
