--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -20,6 +20,7 @@
     "vue-json-viewer": "2",
     "vue-router": "^3.5.1",
     "vue-tmx": "^0.1.12",
+    "vue-tour": "^2.0.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
