--- a/config/terminate-malicious-pods.yaml
+++ b/config/terminate-malicious-pods.yaml
@@ -36,5 +36,5 @@ rules:
   - name: Privilege Escalation
   - name: Defense Evasion
   - name: Persistence
-  - name: tracee-default
+  - name: Tracee Default Set
 name: Terminating Malicious Pods
