--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3"
 services:
-    postee:
-        container_name: postee
+    posteewebhook:
         build:
             context: .
             dockerfile: Dockerfile
@@ -9,14 +8,11 @@ services:
             - 8082:8082
         volumes:
             - bolt:/server/database
-            - config:/config
+            - config:/server
         environment:
-            - "POSTEE_CFG=/config/cfg.yaml"
+            - "POSTEE_CFG=/server/cfg.yaml"
             - "POSTEE_DEBUG=ON"
     posteeui:
-        depends_on:
-            - postee
-        container_name: postee-ui
         build:
             context: .
             dockerfile: Dockerfile.ui
@@ -24,11 +20,11 @@ services:
             - 8001:8001
         volumes:
             - bolt:/server/database
-            - config:/config
+            - config:/server
         environment:
-            - "POSTEE_UI_CFG=/config/cfg.yaml"
+            - "POSTEE_UI_CFG=/server/cfg.yaml"
             - "POSTEE_UI_PORT=8001"
-            - "POSTEE_UI_UPDATE_URL=http://postee:8082"
+            - "POSTEE_UI_UPDATE_URL=http://posteewebhook:8082"
 volumes:
   bolt:
   config:
