--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,8 @@ nav:
 - Use cases:
   - Simple Examples: examples.md
   - Blueprints:
+    - Trivy Scan: blueprints/trivy-vulnerability-scan.md
+    - Trivy AWS Security Hub: blueprints/trivy-aws-security-hub.md
     - External Healthcheck: blueprints/external-healthcheck.md
     - Image Processing: blueprints/image-processing.md
 - Installation: install.md
