--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Blueprints:
     - Trivy Scan: blueprints/trivy-vulnerability-scan.md
     - Trivy AWS Security Hub: blueprints/trivy-aws-security-hub.md
+    - Trivy Operator: blueprints/trivy-operator.md
     - External Healthcheck: blueprints/external-healthcheck.md
     - Image Processing: blueprints/image-processing.md
 - Installation: install.md
